--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+    <title>Choice Optimizer</title>
   </head>
   <body>
     <div class="master-container">
