add 1200 cell limit, add json import, add json input export, add better testing

--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,8 @@
             subject to any specified constraints. Perfect for school admins, summer camps,
             and anyone else who had to do the previously difficult task of trying to make sure
             everyone gets the best outcome possible in a mathematically optimal way. (That is sure to
-            disappoint everybody!)
+            disappoint everybody!) Note that this demo is limited to 1,200 cells; for larger data sets,
+            contact me on Github or run the app yourself.
           </span>
         </div>
       </div>
